# nonogram-solver

./: README.md  pyproject.toml
documentation/: spec.md  week-1.md
documentation/weekly_reports/: week-2.md  week-3.md
src/: board.py  main.py  visualiser.py
