[tool.poetry]
name = "nonogram-solver"
version = "0.1.0"
description = ""
authors = ["Kaapo <kaapo.kivioja@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
